--- a/Index.html
+++ b/Index.html
@@ -1,2 +1,26 @@
+<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
-</Html>
+<head>
+	<title>CSS</title>
+	
+		<link rel="stylesheet" href="yellow.css">
+		
+</head>
+<body>
+    <p id="para1" class="para2">This is a para</p>
+    <p >This is another para</p>
+    <h1 class="para1"> A heading</h1>
+    <h2> Another heading</h2> 
+
+
+    <h1 style="background-color:rgba(255,99,71,0);">rgba(255,99,71,0)</h1>
+    <h1 style="background-color:rgba(255,99,71,0.2);">rgba(255,99,71,0.2)</h1>
+    <h1 style="background-color:rgba(255,99,71,0.4);">rgba(255,99,71,0.4)</h1>
+    <h1 style="background-color:rgba(255,99,71,0.6);">rgba(255,99,71,0.6)</h1>
+    <h1 style="background-color:rgba(255,99,71,0.8);">rgba(255,99,71,0.8)</h1>
+    <h1 style="background-color:rgba(255,99,71,1);">rgba(255,99,71,1)</h1>
+
+    <p>You can make transparent by using the RGBA color value</p>
+</body>
+</html>
